--- a/index.html
+++ b/index.html
@@ -121,4 +121,16 @@
     console.log(arr[1][0]);
     console.log(arr[1][2]);
 
+    console.log("Before push : " + arr);
+    arr.push("Zain");
+    console.log("After push : " + arr);
+    var removeItem = arr.pop();
+    console.log("After pop : " + arr);
+    console.log("Remove item : " + removeItem);
+    removeItem = arr.shift();
+    console.log("After shift : " + arr);
+    console.log("Remove item : " + removeItem);
+    arr.unshift("Happy");
+    console.log("After unshift : " + arr);
+
 </script>
